add persistent storage

--- a/server/mongo-db/mongo.yaml
+++ b/server/mongo-db/mongo.yaml
@@ -30,7 +30,13 @@ spec:
                 secretKeyRef:
                   name: mongodb-secret
                   key: mongo-root-password
-
+          volumeMounts:
+            - name: "mongo-data-dir"
+              mountPath: "/data/db"
+      volumes:
+        - name: "mongo-data-dir"
+          persistentVolumeClaim:
+            claimName: "mongo-data"
 ---
 apiVersion: v1
 kind: Service
